--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   
   <header id="header" class="header-tops">
     <div class="container">
-      <h1><a href="index.html">Aras Güngöre</a></h1>
+      <h1><a href="index.html">Vedika Holani</a></h1>
       <h2 style="color:#fff">I am <span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -107,14 +107,11 @@
         </ul>
       </nav>
       <div class="social-links">
-        <a href="mailto:arasgungore09@gmail.com" target="_blank" class="gmail"><i class="bx bxl-google"></i></a>
-        <a href="https://www.linkedin.com/in/arasgungore" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://github.com/arasgungore" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://www.youtube.com/@arasgungore" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
-        <!-- <a href="https://www.researchgate.net/profile/Aras-Guengoere" target="_blank" class="researchgate"><i class="bx bxl-researchgate"></i></a> -->
-        <!-- <a href="https://stackoverflow.com/users/23314477/arasgungore" target="_blank" class="stackoverflow"><i class="bx bxl-stackoverflow"></i></a> -->
-        <a href="https://www.hackerrank.com/arasgungore" target="_blank" class="hackerrank"><img class="svg" src="assets/img/social/hackerrank.svg" width="13" /></a>
-        <a href="https://leetcode.com/arasgungore" target="_blank" class="leetcode"><img class="svg" src="assets/img/social/leetcode.svg" width="13" /></a>
+        <a href="mailto:vedikaholani@gmail.com" target="_blank" class="gmail"><i class="bx bxl-google"></i></a>
+        <a href="https://www.linkedin.com/in/vedika-holani-30715825a/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/vedika12holani" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+        <!-- <a href="https://www.hackerrank.com/" target="_blank" class="hackerrank"><img class="svg" src="assets/img/social/hackerrank.svg" width="13" /></a>
+        <a href="https://leetcode.com/" target="_blank" class="leetcode"><img class="svg" src="assets/img/social/leetcode.svg" width="13" /></a> -->
       </div>
     </div>
   </header>
@@ -132,24 +129,26 @@
       </div>
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/about/max_planck.jpg" class="img-fluid" alt="">
+          <img src="assets/img/about/max_planck.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>
-            Hi there, my name is Aras Güngöre.<br><br>
+            Hi there, my name is Vedika.<br><br>
             
-            I’m a graduate of Boğaziçi University with a bachelor’s degree in Electrical and Electronics Engineering and a minor
-            degree in Computer Science. My academic journey seamlessly integrates these fields, providing me with a strong
-            foundation in signal processing, machine learning, computer vision, embedded systems, and software development –
-            all areas that align with my personal interests. This combination of skills allows me to innovate at the crossroads
-            of hardware and software, bridging intricate technological gaps.<br><br>
-            
-            I’ve gained experience across various sectors, including IT, R&D, telecommunications, and defense industries.
-            In these roles, I’ve used my technical expertise and collaboration skills to contribute to significant projects in
-            intelligent systems, robotics, generative AI, image processing, and digital communications. These experiences demonstrate
-            my ability to navigate complex challenges and drive interdisciplinary projects, both in academia and industry. With a
-            passion for technology and a versatile skill set that spans multiple domains, I’m well-positioned to make lasting contributions
-            through innovation and teamwork.
+     I’m a B.Tech Computer Science student with strong foundations in data structures & algorithms and a knack for building end-to-end web solutions. My work focuses on practical engineering: clean component design, robust backend architecture, and shipping features that users actually enjoy. 
+     A few highlights of how I work:
+I build interactive front-ends with React and standard web technologies (HTML5, CSS3, JavaScript) and
+ connect them to Java-based backends (Spring Boot).
+I design and implement databases and data access layers using SQL and JDBC.
+<br>
+  I’m experienced with version control and collaboration 
+workflows in Git/GitLab and comfortable troubleshooting merge 
+conflicts and integrating third-party tools.
+<br>
+  I’m learning and applying DevOps practices — containerization
+with Docker and deploying apps to cloud platforms.
+Beyond code, I enjoy breaking problems down into testable 
+parts and improving developer experience through thoughtful documentation and automation. On this site you’ll find a selection of my projects (including a React event-handling demo and full-stack apps), a technical blog where I explain tricky bugs and solutions, and links to my GitHub and LinkedIn.
           </p>
         </div>
       </div>
@@ -171,19 +170,18 @@
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <a href="http://www.boun.edu.tr/en_US" target="_blank"><img src="assets/img/education/boun_transparent.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
-            <h4 style="text-align:left;"><a href="http://www.boun.edu.tr/en_US" target="_blank" style="color:#12d640">Boğaziçi University</a><br> </h4>
-            <h5 style="text-align:left;"><em>Bachelor of Science in Electrical and Electronics Engineering; <strong>GPA: 3.62/4.00</strong></em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>September 2018 - June 2023</em></span>
-            <span class="right" style="float:right;color:#fff;"><em>Istanbul, Turkey</em></span><br><br>
-            <h6 style="text-align:left;"><strong>Field of Specialization:</strong> Communication Systems and Signal Processing</h6>
+            <h4 style="text-align:left;"><a href="https://ycce.edu/" target="_blank" style="color:#12d640">YCCE</a><br> </h4>
+            <h5 style="text-align:left;"><em>Bachelor of Computer Science and Technology; <strong>GPA: 3.62/4.00</strong></em></h5>
+            <span class="left" style="float:left;color:#fff;"><em>November 2020 - June 2026</em></span>
+            <span class="right" style="float:right;color:#fff;"><em> Nagpur, Maharashtra</em></span><br><br>
+            <h6 style="text-align:left;"><strong>Field of Specialization:</strong> Computer Science</h6>
             <h6 style="text-align:left;"><strong>Senior Design Project:</strong> Keyword Search for Sign Language</h6>
             <h6 style="text-align:left;"><strong>High Honors Degree:</strong> Awarded to Bachelor alumni who have graduated with a GPA greater than or equal to 3.50. (July 2023)</h6>
-            <h6 style="text-align:left;"><strong>National University Admission Exam (YKS):</strong> Ranked 75<sup>th</sup> in Mathematics and Science among ca. 2.3 million candidates with a test score of 489.92/500. (July 2018)</h6>
             <h6 style="text-align:left;"><strong>Relevant Coursework:</strong></h6>
             <ul style="columns:2;text-align:left;">
-              <li>Materials Science</li>
-              <li>Electrical Circuits I&#8209;II</li>
-              <li>Digital System Design</li>
+              <li>Operating System</li>
+              <li>Computer Networks</li>
+              <li>DataBase Management System</li>
               <li>Numerical Methods</li>
               <li>Probability Theory</li>
               <li>Electronics I&#8209;II</li>
