--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@ parts and improving developer experience through thoughtful documentation and au
               <li>Operating System</li>
               <li>Computer Networks</li>
               <li>DataBase Management System</li>
-              <li>Numerical Methods</li>
-              <li>Probability Theory</li>
+              <li>Data Structure and Algorithms</li>
+              <li>Web Development</li>
               <li>Electronics I&#8209;II</li>
               <li>Signals and Systems</li>
               <li>Electromagnetic Field Theory</li>
@@ -199,6 +199,7 @@ parts and improving developer experience through thoughtful documentation and au
             </ul>
           </div>
         </div>
+        <!-- Vedika -->
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <a href="http://www.boun.edu.tr/en_US" target="_blank"><img src="assets/img/education/boun_transparent.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
