--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ parts and improving developer experience through thoughtful documentation and au
         </div>
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="https://kyiv.qsi.org/" target="_blank"><img src="assets/img/education/jcc.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
+            <a href="https://kyiv.qsi.org/" target="_blank"><img src="assets/img/education/jcc.jpg" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
             <h4 style="text-align:left;"><a href="https://kyiv.qsi.org/" target="_blank" style="color:#12d640">Jaycees Convent School</a><br> </h4>
             <h5 style="text-align:left;"><em>Primary Education</em></h5>
             <h5 style="text-align:left;"><em>XII; <strong>Percentage : 97.80 %</strong></em></h5>
